Worked on widget

--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>sol_package</title>
+    <script
+      src="http://localhost:5173/support-widget.js"
+      data-donate-id="PpJuVm-buymeatoken"
+    ></script>
   </head>
   <body>
     <div id="root"></div>
