changed the link from local to hosted link

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>sol_package</title>
     <script
-      src="http://localhost:5173/support-widget.js"
+      src="https://sol-helper.netlify.app/support-widget.js"
       data-donate-id="PpJuVm-buymeatoken"
     ></script>
   </head>
